<resources>
    <string name="treatmentssafety_title">Treatments safety</string>
    <string name="treatmentssafety_maxbolus_title">Max allowed bolus [U]</string>
    <string name="treatmentssafety_maxcarbs_title">Max allowed carbs [g]</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_refreshtreatments">Refresh treatments from NS</string>
    <string name="nav_resetdb">Reset Databases</string>
    <string name="reset_db_confirm">Do you really want to reset the databases?</string>
    <string name="nav_exit">Exit</string>
    <string name="danar_useextended_title">Use extended boluses for >200%%</string>
    <string name="danar_bt_name_title">DanaR Bluetooth device</string>
    <string name="ns_sync_use_absolute_title">Always use basal absolute values</string>
    <string name="alert_dialog_storage_permission_text">Please reboot your phone or restart AndroidAPS from the System Settings \notherwise Android APS will not have logging (important to track and verify that the algorithms are working correctly)!</string>
    <string name="description_actions">Some buttons to quickly access common features</string>
    <string name="description_careportal">Enter advanced log book entries.</string>
    <string name="description_config_builder">Used for configuring the active plugins</string>
    <string name="description_objectives">Learning program</string>
    <string name="description_food">Displays the food presets defined in Nightscout</string>
    <string name="description_insulin_rapid">Insulin preset for Humalog and NovoRapid / NovoLog</string>
    <string name="description_insulin_ultra_rapid">Insulin preset for Fiasp</string>
    <string name="description_insulin_free_peak">Allows you to define the peak of the insulin activity and should only be used by advanced users</string>
    <string name="description_loop">Activate or deactivate the implementation triggering the loop.</string>
    <string name="description_ns_client">Synchronizes your data with Nightscout</string>
    <string name="description_ma">State of the algorithm in 2016</string>
    <string name="description_ama">State of the algorithm in 2017</string>
    <string name="description_smb">Most recent algorithm for advanced users</string>
    <string name="description_overview">Displays the current state of your loop and buttons for most common actions</string>
    <string name="description_persistent_notification">Shows an ongoing notification with a short overview of what your loop is doing</string>
    <string name="description_profile_local">Define a profile which is offline available.</string>
    <string name="description_profile_nightscout">Provides the profile you have defined in Nightscout</string>
    <string name="description_profile_simple">Define a profile with only one time block.</string>
    <string name="description_pump_combo">Pump integration for Accu-Chek Combo pumps, requires having ruffy installed</string>
    <string name="description_pump_dana_r">Pump integration for DANA Diabecare R pumps</string>
    <string name="description_pump_dana_r_korean">Pump integration for domestic DANA Diabecare R pumps</string>
    <string name="description_pump_dana_r_v2">Pump integration for DANA Diabecare R pumps with upgraded firmware</string>
    <string name="description_pump_dana_rs">Pump integration for DANA Diabecare RS pumps</string>
    <string name="description_pump_insight">Pump integration for Accu-Chek Insight pumps, requires having SightRemote installed</string>
    <string name="description_pump_mdi">Pump integration for people who do multiple daily injections for their diabetes therapy</string>
    <string name="description_pump_virtual">Pump integration for pumps which don\'t have any driver yet (Open Loop)</string>
    <string name="description_sensitivity_aaps">Sensitivity is calculated the same way like Oref0, but you can specify timeframe to the past. Minimal carb absorption is calculated from max carb absorption time from preferences.</string>
    <string name="description_sensitivity_oref0">Sensitivity is calculated from 24h data in the past and carbs (if not absorbed) are cut after time specified in preferences.</string>
    <string name="description_sensitivity_oref1">Sensitivity is calculated from 8h data in the past and carbs (if not absorbed) are cut after time specified in preferences. Plugin also calculates UAM.</string>
    <string name="description_sensitivity_weighted_average">Sensitivity is calculated as a weighted average from deviations. Newer deviations have higher weight. Minimal carb absorption is calculated from max carb absorption time from preferences. This algorithm is the fastest in following sensitivity changes.</string>
    <string name="description_source_dexcom_g5">Receive BG values from the patched Dexcom G5 app.</string>
    <string name="description_source_dexcom_g6">Receive BG values from the patched Dexcom G6 app.</string>
    <string name="description_source_eversense">Receive BG values from the patched Eversense app.</string>
    <string name="description_source_glimp">Receive BG values from Glimp.</string>
    <string name="description_source_mm640g">Receive BG values from the 600SeriesAndroidUploader.</string>
    <string name="description_source_ns_client">Downloads BG data from Nightscout</string>
    <string name="description_source_xdrip">Receive BG values from xDrip.</string>
    <string name="description_treatments">Saves all treatments that were made</string>
    <string name="description_wear">Monitor and control AndroidAPS using your WearOS watch.</string>
    <string name="description_xdrip_status_line">Show information about your loop on your xDrip+ watchface.</string>
    <string name="description_sms_communicator">Remote control AndroidAPS using SMS commands.</string>
    <string name="objectives_button_back">Back</string>
    <string name="objectives_button_start">Start</string>
    <string name="objectives_button_verify">Verify</string>
    <string name="nsprofileview_units_label">Units</string>
    <string name="nsprofileview_dia_label">DIA</string>
    <string name="nsprofileview_ic_label">IC</string>
    <string name="nsprofileview_isf_label">ISF</string>
    <string name="nsprofileview_basal_label">Basal</string>
    <string name="nsprofileview_target_label">Target</string>
    <string name="noprofileset">NO PROFILE SET</string>
    <string name="treatments_insulin_label_string">Insulin:</string>
    <string name="treatments_carbs_label_string">Carbs:</string>
    <string name="treatments_iob_label_string">IOB:</string>
    <string name="sms_iob">IOB:</string>
    <string name="treatments_activity_string">Activity:</string>
    <string name="treatments_iobtotal_label_string">Total IOB:</string>
    <string name="treatments_iobactivitytotal_label_string">Total IOB activity:</string>
    <string name="tempbasals_realduration_label_string">Dur:</string>
    <string name="tempbasals_netratio_label_string">Ratio:</string>
    <string name="tempbasals_netinsulin_label_string">Ins:</string>
    <string name="tempbasals_iob_label_string">IOB:</string>
    <string name="tempbasals_iobtotal_label_string">Total IOB:</string>
    <string name="treatments_newtreatment_insulinamount_label">Insulin</string>
    <string name="treatments_newtreatment_carbsamount_label">Carbs</string>
    <string name="treatments_wizard_bg_label">BG</string>
    <string name="treatments_wizard_tt_label">TT</string>
    <string name="treatments_wizard_carbs_label">Carbs</string>
    <string name="treatments_wizard_correction_label">Corr</string>
    <string name="insulin_unit_shortname">U</string>
    <string name="treatments_wizard_bolusiob_label">Bolus IOB</string>
    <string name="openapsma_run">Run now</string>
    <string name="vitualpump_label">VIRTUAL PUMP</string>
    <string name="pump_basebasalrate_label">Base basal rate</string>
    <string name="pump_tempbasal_label">Temp basal</string>
    <string name="virtualpump_extendedbolus_label">Extended bolus</string>
    <string name="pump_battery_label">Battery</string>
    <string name="pump_reservoir_label">Reservoir</string>
    <string name="virtualpump_resultok">OK</string>
    <string name="openapsma_lastrun_label">Last run</string>
    <string name="openapsma_inputparameters_label">Input parameters</string>
    <string name="openapsma_glucosestatus_label">Glucose status</string>
    <string name="openapsma_currenttemp_label">Current temp</string>
    <string name="openapsma_iobdata_label">IOB data</string>
    <string name="openapsma_profile_label">Profile</string>
    <string name="openapsma_mealdata_label">Meal data</string>
    <string name="result">Result</string>
    <string name="openapsma_noglucosedata">No glucose data available</string>
    <string name="nochangerequested">No change requested</string>
    <string name="hypoppred_settings">Detection and prevention of impending LOW\'s</string>
    <string name="hypoppred_24hwindow_title">Set time frame</string>
    <string name="hypoppred_24hwindow_summary">Default LOW prevention is active all day. This can be limited to a specific period by setting a time frame. NOTE: this setting only applies to automatic LOW prevention, it does not apply to hypo alert warnings. These are given all day round.</string>
    <string name="hypoppred_window_from">Start:</string>
    <string name="key_hypoppred_24hwindow">hypoppred_24hwindow</string>
    <string name="hypoppred_window_from_summary">Start of timeframe</string>
    <string name="hypoppred_window_to">End:</string>
    <string name="hypoppred_window_to_summary">End of timeframe</string>
    <string name="key_hypoppred_threshold_bg">hypoppred_threshold_bg</string>
    <string name="hypoppred_threshold_bg">Guard against BG dropping below:</string>
    <string name="hypoppred_threshold_bg_summary">Guard against BG dropping below:</string>
    <string name="key_hypoppred_window_to">hypoppred_window_to</string>
    <string name="key_hypoppred_window_from">hypoppred_window_from</string>
    <string name="droptarget_settings">Lowering of target BG when BG is stable</string>
    <string name="key_droptarget_24hwindow">droptarget_24hwindow</string>
    <string name="droptarget_24hwindow_title">Set time frame</string>
    <string name="droptarget_24hwindow_summary">Default target will always be dropped when BG is stable. This can be limited to a specific time period by setting a time frame.</string>
    <string name="key_droptarget_window_to">droptarget_window_to</string>
    <string name="droptarget_window_to">End:</string>
    <string name="droptarget_window_to_summary">End pf timeframe</string>
    <string name="key_droptarget_window_from">droptarget_window_from</string>
    <string name="droptarget_window_from">Start:</string>
    <string name="droptarget_window_from_summary">Start of timeframe</string>
    <string name="key_droptarget_TT_bg">droptarget_TT_bg</string>
    <string name="droptarget_TT_bg">BG level for TT</string>
    <string name="droptarget_TT_bg_summary">key_droptarget_TT_bg</string>
    <string name="key_droptarget_waittime">droptarget_waittime</string>
    <string name="droptarget_waittime_summary">Time TT runs after stable BG ends (mins)</string>
    <string name="droptarget_waittime">Time TT runs after stable BG ends (mins)</string>
    <string name="mealadvisor_settings">Advice on when to start a meal</string>
    <string name="key_mealadvisor_startbg">mealadvisor_startbg</string>
    <string name="key_mealadvisor_minsprewarn">mealadvisor_minsprewarn</string>
    <string name="mealadvisor_startbg">Threshold BG to start eating</string>
    <string name="mealadvisor_startbg_summary">Threshold BG to start eating</string>
    <string name="mealadvisor_minsprewarn">Mins to warn before start eating</string>
    <string name="mealadvisor_minsprewarn_summary">Mins to warn before start eating</string>
</resources>